--- a/WpfApp/WpfApp/MainWindow.xaml
+++ b/WpfApp/WpfApp/MainWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="WpfApp.MainWindow"
+<Window x:Class="WpfApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:cef="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
         xmlns:local="clr-namespace:WpfApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="NewLand Annotation Training Tool" Height="768" Width="1024"
+        WindowStartupLocation="CenterScreen">
     <Grid>
-
+        <cef:ChromiumWebBrowser x:Name="chromeBrowser" Grid.Row="0" Grid.Column="0" />
     </Grid>
 </Window>
